--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
   "configurations": [
     {
       "name": "Launch Program",
-      "program": "${workspaceFolder}/lie/index.js",
+      "program": "${workspaceFolder}/promise/test.js",
       "request": "launch",
       "skipFiles": [
         "<node_internals>/**"
