新增promise库代码的学习，完善并优化自己写的ppromise，完整通过promises-aplus-tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
   "configurations": [
     {
       "name": "Launch Program",
-      "program": "${workspaceFolder}/promise/test.js",
+      "program": "${workspaceFolder}/promise/test/test.js",
       "request": "launch",
       "skipFiles": [
         "<node_internals>/**"
