--- a/promise/package.json
+++ b/promise/package.json
@@ -3,6 +3,6 @@
     "promises-aplus-tests": "^2.1.2"
   },
   "scripts": {
-    "test": "promises-aplus-tests test.js"
+    "test": "promises-aplus-tests /test/test.js"
   }
 }
